--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://thegerscheffect.com" # the base hostname & protocol for your site
-twitter_username: @thegerscheffect
+twitter_username: thegerscheffect
 github_username:  thegerscheffect
 
 # Build settings
