--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,11 @@
 title: "The Gersch Effect"
 email: gersch@thegerscheffect.com
 description: > # this means to ignore newlines until "baseurl:"
-  This is a cool new web development project I am building while I teach myself how to code. 
-  I am a student at Miami Dade College in route to Florida International University. 
-  I will be transferring into their School of Computer Science in the Spring of 2017. 
-  I have participated in Harvard's Introduction to Computer Science track (CS50x) on edX.org. 
-  Currently, I am participating in FreeCodeCamp.com's 800hr track to their Full Stack Development Certificate. 
-  My goal for the next year is to create a great looking portfolio with projects ranging from non-profits, local government, and for profit clientel.
+  This is a cool new web development project that I am building as practice while I teach myself how to code. 
+  I am a student at Miami Dade College in route to Florida International University's School of Computer Science in the Spring of 2017. 
+  Previously, I have participated in Harvard's Introduction to Computer Science track (CS50x) on edX.org. 
+  Currently, I am participating in FreeCodeCamp.com's 800hr track towards their Full Stack Development Certificate. 
+  My goal for the next year is to create a great looking portfolio with projects ranging from non-profits, local government, and for-profit clientel.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://thegerscheffect.com" # the base hostname & protocol for your site
 twitter_username: thegerscheffect
