--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ _site
 
 #untracked files
 Thumbs.db
+.DS_Store
+*.zip
+*.gz
+log/*.log
+log/*.log.[0-9]
+assets/photoshop/
+assets/videos/
+!assets/videos/tour_*.mp4
